--- a/01-JavaScript-Drum-Kit/index.html
+++ b/01-JavaScript-Drum-Kit/index.html
@@ -4,10 +4,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Drum Kit</title>
-  <link rel="stylesheet" href="styles.css" />
-  <script defer src="main.js"></script>
 </head>
 <body>
+
+  <style>
+    html {
+      font-size: 10px;
+      background: url("./background.jpg") bottom center;
+      background-size: cover;
+    }
+
+    body, html {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+    }
+
+    /* vh - relative to 1% of the height of the viewport* */
+    .keys {
+      display: flex;
+      flex: 1;
+      min-height: 100vh;
+      align-items: center;
+      justify-content: center;
+    }
+
+    /* em - relative to the font-size of the element */
+    /* rem - relative to font-size of the root element */
+    .key {
+      border: .4rem solid black;
+      border-radius: .5rem;
+      margin: 1rem;
+      font-size: 1rem;
+      padding: 1rem .5rem;
+      transition: all .07s ease;
+      width: 10rem;
+      text-align: center;
+      color: white;
+      background: rgba(0,0,0,0.4);
+      text-shadow: 0 0 .5rem black;
+    }
+
+    .playing {
+      transform: scale(1.1);
+      border-color: #ffc600;
+      box-shadow: 0 0 1rem #ffc600;
+    }
+
+    kbd {
+      display: block;
+      font-size: 4rem;
+    }
+
+    .sound {
+      font-size: 1.2rem;
+      text-transform: uppercase;
+      letter-spacing: .1rem;
+      color: #ffc600;
+    }
+  </style>
+
   <div class="keys">
     <div data-key="65" class="key">
       <!-- kbd - keyboard input element -->
@@ -59,5 +115,30 @@
   <audio data-key="74" src="sounds/snare.wav"></audio>
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
+
+  <script>
+    function removeTransition(e) {
+      // console.log(e);
+      if(e.propertyName !== 'transform') return; // skip it if 
+      // console.log(e.propertyName);
+      // console.log(this);
+      e.target.classList.remove('playing');
+    }
+
+    function playSound(e) {
+      // console.log(e)
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+      const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+      if(!audio) return; // stop the function from running all together
+
+      key.classList.add('playing');  
+      audio.currentTime = 0; // rewind to the start
+      audio.play();  
+    }
+
+    const keys = Array.from(document.querySelectorAll('.key'));
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition))
+    window.addEventListener('keydown', playSound)
+  </script>
 </body>
 </html>
