--- a/03-CSS-Variables/index.html
+++ b/03-CSS-Variables/index.html
@@ -4,11 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scoped CSS Variables and JS</title>
-  <link rel="stylesheet" href="styles.css">
-  <script defer src="main.js"></script>
 </head>
 <body>
+
+  <style>
+    :root {
+      --base: #ffc600;
+      --spacing: 10px;
+      --blur: 10px;
+    }
+
+    img {
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .hl {
+      color: var(--base)
+    }
+
+    body {
+      text-align: center;
+      background: #193549;
+      color: whitesmoke;
+      font-family: 'helvetica neue', sans-serif;
+      font-weight: 100;
+      font-size: 50px;
+    }
+
+    .controls {
+      margin-bottom: 50px;
+    }
+
+    input {
+      width: 100px;
+    }
+  </style>
+
   <h3>Update CSS Variables with <span class='hl'>JS</span></h3>
+
   <div class="controls">
     <label for="spacing">Spacing:</label>
     <!-- 
@@ -35,5 +70,26 @@
 
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
   
+  <script>
+    /*
+    if you enter document.querySelectorAll('.controls input') in the inspect console
+    you will get the NodeList with the methods available.
+    the forEach can be used to loop over input
+    */
+
+    const inputs = document.querySelectorAll('.controls input');
+
+    function handleUpdate() {
+      const suffix = this.dataset.sizing || '';
+      console.log(this.dataset) // dataset is an object that contains all the data- attributes in html
+      console.log(suffix) // px
+      console.log(this.name) // spacing or blur or base
+      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix) // name and value are attributes in the html
+    }
+
+    inputs.forEach(input => input.addEventListener('change', handleUpdate));
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate))
+  </script>
+
 </body>
 </html>
