day 27 of 30 days of JavaScript

--- a/26-Stripe-Follow-Along-Nav/index.html
+++ b/26-Stripe-Follow-Along-Nav/index.html
@@ -168,7 +168,7 @@
         <div class="dropdown dropdown1">
           <div class="bio">
             <img src="profile.jpg">
-            <p>Heejung is currently volunteers as a Front End Engineer at Hack for LA. She gained instrumental foundational coding skills from General Assembly.</p>
+            <p>Heejung is a Front End Engineer and she gained instrumental foundational coding skills from General Assembly.</p>
           </div>
         </div>
       </li>
